# Parth

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
PATCH_ACCELERATE/: runAll.sh
cmake/: parthConfig.cmake.in
cmake/find/: FindMETIS.cmake
cmake/recipes/: eigen.cmake  metis.cmake  suitesparse.cmake
demo/: FullDecimateAndSubdivision.cpp  FullRemeshDemo.cpp  IPCBenchmark.cpp  Paper_LagTest.cpp  ParthCompressionTest.cpp  ParthDemo.cpp  PartialDecimationTest.cpp  PatchRemeshDemo.cpp  RemesherLimitationSection.cpp  ReorderingAnalysis.cpp  SurfaceMapsBenchmark.cpp  frame_profiling.cpp  paper_examples.cpp  teaserOpenClose.cpp  teaserRemesher.cpp  teaserRemesherV2.cpp
dev/: CMakeLists.txt  README_POLYSCOPE.md  polyscope_example.cpp  see_level_based_separators.cpp  see_patch_based_separators.cpp  see_separators.cpp  sep_runtime_analysis.cpp
dev/utils/: get_factor_nnz.cpp  get_factor_nnz.h  polyscope_utils.cpp  polyscope_utils.h  vertex_colored_mesh.cpp  vertex_colored_mesh.h
examples/: CMakeLists.txt  README.md
examples/api_demos/: CMakeLists.txt  dynamic_mesh_demo.cpp  quick_start.cpp
examples/api_demos/permutation_computation/: permutation.cpp
examples/cholesky_integration/: accelerate.cpp  cholmod.cpp  mkl.cpp
examples/external_project_example/: CMakeLists.txt  main.cpp
include/parth/: Integrator.h  parth.h
integration_example/: CMakeLists.txt  README.md
integration_example/cmake/recipes/: parth.cmake
integration_example/scripts/: build_with_parth.sh
paper_usage/: ArcSimBenchmark.cpp  ArcSimTeaser.cpp  BarbEval.cpp  CMakeLists.txt  Laplacian_Smoother.cpp  MeshResolutionAdjustment.cpp  ParthFullDemo.cpp  ParthReorderingAnalysis.cpp  ParthTestAndDebug.cpp  SmoothingRemeshingDemo.cpp  factor_reuse_analysis.cpp  remesher.cpp  solver_tester.cpp  teaserIPC.cpp
scripts/: build.sh  compile.sh
scripts/api_demos/: run_quick_start.sh
scripts/dev/: benchmark_sep_runtime.sh
scripts/tests/: create_matrices.sh
src/: parth_api.cpp
src/DemoUtils/: GIF.cpp  createPatch.cpp  projected_cotmatrix.cpp  remeshPatch.cpp  remeshTeaser.cpp  upSample.cpp
src/DemoUtils/include/: createPatch.h  projected_cotmatrix.h  remeshPatch.h  remeshTeaser.h  upSample.h
src/LinSysSolver/: AccelerateSolver.cpp  AccelerateSolver.hpp  CGSolver.cpp  CGSolver.hpp  CHOLMODSolver.cpp  CHOLMODSolver.hpp  EigenSolver.cpp  EigenSolver.hpp  LinSysSolver.cpp  LinSysSolver.hpp  MKLSolver.cpp  MKLSolver.hpp  PureMETIS.cpp  PureMETIS.hpp  SympilerSolver.cpp  SympilerSolver.hpp
src/PARTH/: Parth_Commander.cpp  Parth_Commander.h
src/PARTH/Immobilizer/: ND_Regions.cpp
src/PARTH/Immobilizer/include/: ND_Regions.h
src/PARTH/LinearSolvers/LeftLooking_Parth/: common.cpp  executor.cpp  inspector.cpp  matrix_allocation.cpp  options.cpp  solve.cpp
src/PARTH/LinearSolvers/LeftLooking_Parth/CustomCholmod/MyAnalysis/: barb_analyze.cpp  barb_super_symbolic.cpp
src/PARTH/LinearSolvers/LeftLooking_Parth/CustomCholmod/MyFactorize/: barb_factorize.cpp
src/PARTH/LinearSolvers/LeftLooking_Parth/CustomCholmod/MySolve/: barb_solve.cpp  barb_solve_supernode.cpp
src/PARTH/LinearSolvers/LeftLooking_Parth/CustomCholmod/MySupernode/: barb_numeric_supernode.cpp
src/PARTH/LinearSolvers/LeftLooking_Parth/CustomCholmod/include/: barb_parallel_t_super_numeric.h  barb_reuse_parallel_t_super_numeric.h  t_cholmod_super_solve.h
src/PARTH/LinearSolvers/LeftLooking_Parth/include/: LeftLooking_Parth.h
src/PARTH/Utils/: Parth_utils.cpp  Regions.cpp
src/PARTH/Utils/Visualizer/: NewtonIterVisualization.cpp
src/PARTH/Utils/Visualizer/include/: NewtonIterVisualization.h
src/PARTH/Utils/includes/: Parth_utils.h  Regions.h  RingBuffer.h
src/PARTH/cmake/find/: FindMKL.cmake  FindSuiteSparse.cmake
src/PARTH/cmake/recipes/: onetbb.cmake  sympiler.cmake  tbb.cmake
src/PARTH/include/: parth.h
src/Parth/: HMD.cpp  Integrator.cpp  Parth.cpp  ParthAPI.cpp
src/Parth/include/: HMD.h  Integrator.h  Parth.h  ParthAPI.h  Parth_utils.h
src/ParthRefactor/: HMD.cpp  Parth.cpp  Parth_utils.cpp
src/ParthRefactor/include/: HMD.h
src/utils/: utils.cpp
src/utils/includes/: sparse_inspector.h
tests/: CMakeLists.txt  example_creator.cpp
tests/matrices/: 0_matrix.mtx  1_matrix.mtx  2_matrix.mtx  3_matrix.mtx  4_matrix.mtx  original_matrix.mtx
